# gscholar

./: Cargo.toml  README.md
src/: client.rs  lib.rs
src/scholar/: mod.rs  scholar.rs
