[package]
name = "scholar"
version = "0.1.0"
authors = ["L04DB4L4NC3R <angadsharma1016@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.12.0"
select = "0.5.0"
