[package]
name = "scholar"
version = "0.1.0"
edition = "2018"
authors = ["L04DB4L4NC3R <angadsharma1016@gmail.com>"]
description = "The unofficial Google Scholar API"
repository = "https://github.com/L04DB4L4NC3R/scholar"
readme = "README.md"
license-file = "LICENCE"
keywords = ["google", "scholar", "api", "research", "books"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.12.0"
select = "0.5.0"
